--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource-variable/dm-sans": "^5.2.5",
     "@fontsource/barlow": "^5.2.5",
     "@iconify/react": "^5.2.1",
+    "@mui/icons-material": "^7.3.5",
     "@mui/lab": "^7.0.0-beta.10",
-    "@mui/material": "^7.0.1",
+    "@mui/material": "^7.3.5",
+    "@reduxjs/toolkit": "^2.10.1",
     "apexcharts": "^4.5.0",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.34.1",
@@ -43,8 +45,10 @@
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
-    "simplebar-react": "^3.3.0"
+    "simplebar-react": "^3.3.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
